--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
 </head>
 <body>
   <div class="container">
-    <h1>Video Cutter</h1>
+    <h1>Video Cut</h1>
     <button id="select-video">Selecionar Vídeo</button>
     <p id="video-path">Nenhum vídeo selecionado</p>
     <button id="select-directory">Selecionar Diretório</button>
